--- a/manifest.json
+++ b/manifest.json
@@ -50,7 +50,7 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "wx970c8e0710522d82",
+        "appid" : "wxb151f75f287471b0",
         "setting" : {
             "urlCheck" : false
         },
